software-center (1.1.15) unstable; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/widgets/animatedimage.py:
    - fix crash when image property is not set
  * updated po/th.po:
    - thanks to Sira Nokyoonhtong 

  [ Gary Lasker ]
  * data/ui/SoftwareCenter.ui:
    - tweak default window width to restore four-column view
      in the categories screen
  * softwarecenter/view/channelpane.py:
    - make status bar text for individual channel views
      consistent with that in the "Get Software" section
      (LP: #528055)

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 25 Feb 2010 17:32:20 -0500

software-center (1.1.14) lucid; urgency=low

  * softwarecenter/view/:
    - add a bunch of missing atk description to the widgets
  * softwarecenter/view/widgets/pathbar2.py:
    - make the PathParts subclasses of atk.Objects and add atk
      descriptions/parent relations
  * debian/control:
    - add missing po4a b-d

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 24 Feb 2010 20:56:13 +0100

software-center (1.1.13) lucid; urgency=low

  [ Michael Vogt ]
  * data/featured.menu.in:
    - add scribus, blender
    - fix missing i18n
  * data/software-center.menu.in:
    - add a bunch of missing _
  * softwarecenter/backend/aptd.py:
    - fix cache reload functionality
    - fix display of update/external transactions (LP: #514861)
  * po/help/po4a.conf:
    - make help translatable via po4a (LP: #439353)
  * po/help/software-center-doc.pot:
    - add help pot
  * setup.py:
    - build help translations automatically

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - fix ValueError in on_transactions_changed (LP: #523420)
    - fix AttributeError in do_render (LP: #523341)
  * softwarecenter/view/installedpane.py:
    - fix AttributeError in refresh_apps() (LP: #520097)
  * softwarecenter/view/widgets/pathbar2.py:
    - fix typo in PathBarThemeHumanClearlooks class,
      gave an AttributeError in __expose_cb() (LP: #523452) 